	  the input.
	- Updated the fl_draw() and fl_measure() methods to
	  accept an optional draw_symbols argument, which
	  controls whether symbols are drawn in the text.
	- Added new Fl::visible_focus() methods to control
	  whether the focus box is drawn.
	- The focus box is now drawn using the contrast color.
	- Fl_Repeat_Button didn't accept keyboard focus.


CHANGES IN FLTK 1.1.0b5

	**** NOTE: DUE TO CHANGES IN THE WIDGET CLASSES,  ****
	****       YOU MUST RECOMPILE ALL SOURCE FILES    ****
	****       THAT USE FLTK!!!                       ****

	- All FLTK color values are now 32-bits and support
	  both the legacy 8-bit color values as well as 24-bit
	  RGB values (0xRRGGBB00 for 24-bit RGB, 0x000000II
	  for indexed color).
	- Fl::set_boxtype() and fl_internal_boxtype() now keep
	  track of when a boxtype is changed; this allows you to
	  override the "special" boxtypes without references to
	  those boxtypes causing them to be reset.
	- Fl_Help_Func now takes a Fl_Widget pointer as well as
	  a pathname.
	- Added code to support FL_KEYUP events.
	- Focus did not return to the Fl_Text_Display and Editor
	  widgets when scrolling and then clicking inside the
	  editor window.
	- Now set the line size of the vertical scrollbar in the
	  text editor to 1.
	- The symbols demo didn't show the strings needed to
	  show the corresponding symbol (the label string was
	  not quoted...)
	- FLTK should now compile with Cygwin cleanly.
	- Shortcut changes were not being saved by FLUID.
	- FLUID didn't write the deimage() static data.


CHANGES IN FLTK 1.1.0b4

	**** NOTE: DUE TO CHANGES IN THE FL_WIDGET CLASS, ****
	****       YOU MUST RECOMPILE ALL SOURCE FILES    ****
	****       THAT USE FLTK!!!                       ****

	- Updated the flags_ member of Fl_Widget to be an
	  integer instead of uchar, to support the new
	  FL_OVERRIDE flag for Fl_Window.

	- The parent() method of Fl_Widget now uses pointers to
	  Fl_Group instead of Fl_Widget.
